Fixing apply buttons on mobile

--- a/src/pages/company/internship_card/InternshipCard.css
+++ b/src/pages/company/internship_card/InternshipCard.css
@@ -31,9 +31,14 @@
     font-size: 24px;
     font-weight: bold;
 
-    display: flex;
-    align-self: center;
-    justify-self: right;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+@media only screen and (min-width: 768px) {
+    .is-buttons {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 .is-button {
